# together-sandbox

./: .env  .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  EXPORTED_TYPES.md  LICENSE  LLMS-template.md  README.md  RELEASING.md  api-openapi.json  bundle-docs.sh  format.sh  generate.sh  install.sh  package-lock.json  package.json  pre-commit-config.yaml  release-please-config.json  sandbox-openapi.json
examples/read-file-python-sdk/: README.md  main.py  pyproject.toml  start_sandbox.py
examples/read-file-python-sdk/template/: Dockerfile
together-sandbox-python/: CLAUDE.md  CONTRIBUTING.md  README.md  generate.sh  pyproject.toml
together-sandbox-python/tests/: README.md  test_call_api.py  test_facade.py  test_list.py  test_pagination.py  test_snapshots.py  test_snapshots_e2e.py  test_sse_streaming.py  test_utils.py  test_with_retry.py
together-sandbox-python/tests/e2e/: README.md  __init__.py  conftest.py  helpers.py  test_pagination.py  test_sandbox_execs.py  test_sandbox_filesystem.py  test_sandbox_lifecycle.py  test_snapshots.py
together-sandbox-python/together_sandbox/: __init__.py  _configuration.py  _lifecycle.py  _pagination.py  _remote_image_builder.py  _sandbox.py  _sandboxes.py  _snapshots.py  _streaming.py  _together_sandbox.py  _types.py  _utils.py  docker.py  errors.py  facade.py  types.py
together-sandbox-python/together_sandbox/api/: __init__.py  client.py
together-sandbox-python/together_sandbox/api/endpoints/: __init__.py  default.py  meta.py  sandbox.py  templates.py  vm.py
together-sandbox-python/together_sandbox/api/mocks/: __init__.py  mock_client.py
together-sandbox-python/together_sandbox/api/models/: __init__.py  alias_snapshot_body.py  authorize_body.py  container_registry_credential.py  container_registry_credential_type.py  create_sandbox_body.py  create_snapshot_body.py  create_snapshot_body_architecture.py  create_snapshot_body_image.py  create_snapshot_body_image_architecture.py  error.py  (+198 more)
together-sandbox-python/together_sandbox/core/: .exception_registry.json  README.md  __init__.py  cattrs_converter.py  config.py  exception_aliases.py  exceptions.py  http_transport.py  pagination.py  streaming_helpers.py  utils.py
together-sandbox-python/together_sandbox/sandbox/: __init__.py  client.py
(+243 files in other folders)
