[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "together-sandbox"
version = "1.0.0"
description = "Together Sandbox Python SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.20.0",
    "cattrs>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pyopenapi-gen>=5.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["together_sandbox"]
