[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "together-sandbox"
version = "1.1.0"
description = "Together Sandbox Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.20.0",
    "cattrs>=23.0.0",
    "attrs>=23.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.28.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["together_sandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
